kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-landing-page
  namespace: default
spec:
  selector:
    app: saas-landing-page-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
